components and routing;

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>GrowTell</title>
@@ -7,8 +8,18 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto&effect=shadow-multiple">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto&effect=emboss">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto&effect=outline">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto&effect=3d-float">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+  <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 </head>
+
 <body>
   <gt-root></gt-root>
 </body>
+
 </html>
