--- a/src/404.html
+++ b/src/404.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>GrowTell</title>
-  <base href="https://cordanocorey.github.io/growtell/">
+  <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -18,10 +18,10 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,300" rel="stylesheet">
-<link rel="stylesheet" href="styles.fb8d0d52047257601065.css"></head>
+</head>
 
 <body>
   <gt-root></gt-root>
-<script type="text/javascript" src="runtime.301798c0a484e0901be1.js"></script><script type="text/javascript" src="polyfills.c993a03ccff158d8233d.js"></script><script type="text/javascript" src="main.31b46d7a7ce6b6d5c4dd.js"></script></body>
+</body>
 
 </html>
